fixed pre code first line padding & image cropping

--- a/src/components/App/style.css
+++ b/src/components/App/style.css
@@ -63,3 +63,7 @@ a {
 .row-reverse {
   flex-direction: row-reverse;
 }
+
+pre code {
+  padding: 0 !important
+}
